src/main/webapp/css/admin/imcms-admin_panel.css
/* ... */
.imcms-admin-panel__item .imcms-flag {
    margin: 19px 53px 19px 0;
}

.imcms-admin-panel__item .imcms-flag--en:after,
.imcms-admin-panel__item .imcms-flag--sw:after {
    display: block;
}

.imcms-panel {
    display: block;
    float: right;
}

.imcms-panel__items {
    display: block;
    height: 100%;
    min-width: 880px;
    width: 100%;
    text-align: right;
}

.imcms-panel__item {
    background-position-x: 50%;
    background-position-y: 11px;
    background-size: initial;
    background-repeat: no-repeat;
    background-attachment: initial;
    background-origin: initial;
    background-clip: initial;
    background-color: initial;
    color: #2f4047;
    cursor: pointer;
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 13px;
    font-weight: 600;
    line-height: 15px;
    text-transform: uppercase;
    text-align: center;
    display: inline-block;
    padding-top: 41px;
    position: relative;
    min-width: 110px;
    height: 100%;
    vertical-align: middle;
}

.imcms-panel__item:last-child {
    background: none;
    cursor: default;
    text-align: center;
    padding-top: 0;
}

.imcms-panel__item--active:before,
.imcms-panel__item:hover:before {
    content: "";
    background-color: #0b94d8;
    display: block;
    position: absolute;
    bottom: -17px;
    left: 0;
    width: 100%;
    height: 3px;
}

.imcms-panel__item:last-child:hover:before {
    display: none;
}

.imcms-panel__item--specific {
    background-image: url('../../images_new/admin_panel/icon_edit.png');
}

.imcms-panel__item--publish-of:after,
.imcms-panel__item--page-info:after,
.imcms-panel__item--document:after,
.imcms-panel__item--specific:after,
.imcms-panel__item--admin:after {
    content: "";
    background-color: #d3d8de;
    display: block;
    position: absolute;
    top: -17px;
    right: -1px;
    height: 90px;
    width: 1px;
}

.imcms-panel__item:last-of-type button {
    margin: 5px 0 5px 20px;
}

.imcms-panel__item--versioning-off {
    display: none;
}

.imcms-panel__item--publish-of.imcms-panel__item--has-newer-version {
    opacity: 1;
    cursor: pointer;
}

.imcms-panel__item.imcms-panel__item--has-newer-version:before,
.imcms-panel__item.imcms-panel__item--has-newer-version:hover:before {
    content: "";
    background-color: #FF756F;
    display: block;
    position: absolute;
    bottom: -17px;
    left: 0;
    width: 100%;
    height: 3px
}

#imcmsAdminSpecial {
    width: 100%;
    position: relative;
    z-index: 1501;
    overflow: hidden;
    border-bottom: 1px solid #ccc;
    background-color: #fff;
    -webkit-box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.25), inset 0 -23px 30px 0 rgba(0, 0, 0, 0.04);
    -moz-box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.25), inset 0 -23px 30px 0 rgba(0, 0, 0, 0.04);
    box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.25), inset 0 -23px 30px 0 rgba(0, 0, 0, 0.04);
}

#imcmsAdminSpecial.imcms-collapsible {
    max-height: 10000px; /*dummy value*/
    border-bottom: 1px solid #ccc;
    -webkit-transition: all .5s;
    -moz-transition: all .5s;
    -ms-transition: all .5s;
    -o-transition: all .5s;
    transition: all .5s;
}

#imcmsAdminSpecial.imcms-collapsible.imcms-collapsible-hidden {
    display: none;
}

#imcmsAdminSpecialInner {
    max-width: 1000px;
    margin: 0 auto;
    padding: 0;
}

.imcms-panel__item--settings {
    float: left;
    background-image: url("../../images_new/admin_panel/icon_settings.png");
}

.imcms-panel__item--admin {
    background-image: url("../../images_new/admin_panel/icon_admin.png");
}

.imcms-panel__item--document {
    background-image: url("../../images_new/admin_panel/icon_doc.png");
}

.imcms-panel__item--page-info {
    background-image: url("../../images_new/admin_panel/icon_pageinfo.png");
}

.imcms-panel__item--publish-of {
    opacity: 0.4;
    cursor: not-allowed;
    background-image: url("../../images_new/admin_panel/icon_publish.png");
}

.imcms-panel__item--preview {
    background-image: url("../../images_new/admin_panel/icon_preview.png");
}

.imcms-panel__item--edit {
    background-image: url("../../images_new/admin_panel/icon_edit.png");
}

.imcms-panel__item--public {
    background-image: url("../../images_new/admin_panel/icon_public.png");
}

.imcms-admin-panel__item:last-of-type {
    margin-right: 0;
    width: 68%;
}

.imcms-panel__item--settings:hover {
    background-image: url("../../images_new/admin_panel/icon_settings_active.png");
}

.imcms-panel__item--admin:hover {
    background-image: url("../../images_new/admin_panel/icon_admin_active.png");
}

.imcms-panel__item--document:hover {
    background-image: url("../../images_new/admin_panel/icon_doc_active.png");
}

.imcms-panel__item--page-info:hover {
    background-image: url("../../images_new/admin_panel/icon_pageinfo_active.png");
}

.imcms-panel__item--publish-of:hover {
    background-image: url("../../images_new/admin_panel/icon_publish_active.png");
}

.imcms-panel__item--preview:hover {
    background-image: url("../../images_new/admin_panel/icon_preview_active.png");
}

.imcms-panel__item--edit:hover {
    background-image: url("../../images_new/admin_panel/icon_edit_active.png");
}

.imcms-panel__item--public:hover {
    background-image: url("../../images_new/admin_panel/icon_public_active.png");
}

/* small panel mode */

.imcms-admin-panel--small .imcms-admin-panel__item:first-of-type,
.imcms-admin-panel--small .imcms-admin-panel__item:nth-of-type(2) {
    max-height: 30px;
}

.imcms-admin-panel--small .imcms-admin-panel__item:nth-of-type(3) {
    padding-top: 5px;
}

.imcms-admin-panel--small .imcms-admin-panel__item:first-of-type {
    top: -2px;
    max-width: 50px;
}

.imcms-admin-panel--small .imcms-admin-panel__title {
    padding-top: 5px;
    line-height: 15px;
}

.imcms-admin-panel--small .imcms-panel__item {
    text-indent: -15000px;
    background-position-y: 5px;
    padding-top: 0;
}
/* ... */

